--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".recycleview.RecyclerViewActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.UTeeth3pi.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
