--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
         android:theme="@style/Theme.UTeeth3pi"
         tools:targetApi="31">
         <activity
+            android:name=".recycleview.RecyclerViewChamadosActivity"
+            android:exported="true" />
+        <activity
             android:name=".recycleview.RecyclerViewActivity"
             android:exported="true"
-            android:theme="@style/Theme.UTeeth3pi.NoActionBar"/>
+            android:theme="@style/Theme.UTeeth3pi.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
