--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,11 @@
         android:theme="@style/Theme.UTeeth3pi"
         tools:targetApi="31">
         <activity
-            android:name=".ImageViewActivity"
-            android:exported="false" />
+            android:name=".recycleview.AvaliacaoActivity"
+            android:exported="true" />
         <activity
             android:name=".ChamadosActivity"
             android:exported="false" />
-        <activity
-            android:name=".recycleview.RecyclerViewChamadosActivity"
-            android:exported="true" />
         <activity
             android:name=".recycleview.RecyclerViewActivity"
             android:exported="true"
